# manga-notif

./: README.md  manga.ipynb  pyproject.toml
