[tool.poetry]
name = "manga_notif"
version = "0.1.0"
description = "manga notification"
authors = ["ashfinenayet <ashfin.enayet@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
beautiful = "soup"
bs4 = "^0.0.1"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
